--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </div>
         <div>
             <button type="button" onclick="sum()">+</button>
-            <button type="button" onclick="difference()">+</button>
-            <button type="button" onclick="product()">+</button>
+            <button type="button" onclick="difference()">-</button>
+            <button type="button" onclick="product()">*</button>
             <button type="button" onclick="quotient()">/</button>
             <button type="button" onclick="clear()">C</button>
         </div>
