--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <form>
         <div>
-            <input type="UI_num" id="UI_number" placeholder="0">
+            <input type="UI_Num" id="UI_Number" placeholder="0">
         </div>
         <div>
             <button type="button" onclick="sum()">+</button>
